--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Ready to Make Room? How Our Junk Removal Service Can Transform Your Space!">
@@ -67,9 +66,37 @@
             .container {
                 width: 90%;
             }
+            h1 {
+                font-size: 1.5em;
+                padding: 15px;
+            }
+            .section-box {
+                padding: 15px;
+                margin: 15px 0;
+            }
+            .image-container img {
+                width: 100%;
+                height: auto;
+            }
+        }
+        @media (max-width: 480px) {
+            .container {
+                width: 95%;
+            }
+            h1 {
+                font-size: 1.2em;
+            }
+            h2 {
+                font-size: 1.3em;
+            }
+            h3 {
+                font-size: 1.1em;
+            }
+            p {
+                font-size: 0.9em;
+            }
         }
     </style>
-     <meta name="google-site-verification" content="OhFfjN00a0RcMuAGIzqQs5iBZMbnTNLcAw1yb6RZo7o" />
 </head>
 <body>
 
@@ -79,14 +106,15 @@
         </div>
 
         <div class="image-container">
-             <div class="section-box">
-            <img src="https://media.istockphoto.com/id/484188981/photo/somebodys-got-to-do-it.jpg?s=612x612&w=0&k=20&c=GuGxX9VxjIHvWlL81PikLDOL3s2MIiMBiYaH6b0DQkM=" alt="Junk Removal">
+            <div class="section-box">
+                <img src="https://media.istockphoto.com/id/484188981/photo/somebodys-got-to-do-it.jpg?s=612x612&w=0&k=20&c=GuGxX9VxjIHvWlL81PikLDOL3s2MIiMBiYaH6b0DQkM=" alt="Junk Removal">
+            </div>
         </div>
 
         <div class="section-box">
             <h2>The Importance of Decluttering Your Space</h2>
             <p>Clutter isn’t just an eyesore—it can drastically affect your productivity, emotional well-being, and overall quality of life. Whether it’s in a residential or business setting, clutter accumulates slowly over time. The broken appliances you never got around to disposing of, the old furniture gathering dust in the corner, or the boxes of forgotten items in your garage—all of these take up valuable space and create an unorganized environment that can feel overwhelming.</p>
-            <p>By taking steps to remove this unnecessary <b><a href=" https://www.google.com/maps?cid=15511444713105430302"> Junk Removal Service in Aurora CO</a></b>, you not only free up physical space, but you also clear mental space for better focus and peace of mind. Professional junk removal services play a crucial role in simplifying this process, ensuring the efficient removal and disposal of unwanted items. By making room in your life—whether by clearing out your basement, garage, or workspace—you allow for a more organized, functional environment that supports productivity, relaxation, and well-being.</p>
+            <p>By taking steps to remove this unnecessary <b><a href="https://www.google.com/maps?cid=15511444713105430302">Junk Removal Service in Aurora CO</a></b>, you not only free up physical space, but you also clear mental space for better focus and peace of mind. Professional junk removal services play a crucial role in simplifying this process, ensuring the efficient removal and disposal of unwanted items. By making room in your life—whether by clearing out your basement, garage, or workspace—you allow for a more organized, functional environment that supports productivity, relaxation, and well-being.</p>
             <p>Not addressing clutter in time can also lead to more serious consequences, such as tripping hazards, pest infestations, or health risks from accumulated dust and mold. This makes regular decluttering a necessary task, not just for cleanliness but also for your safety and comfort.</p>
         </div>
 
@@ -131,7 +159,7 @@
 
         <div class="section-box">
             <h2>Conclusion</h2>
-            <p>In conclusion, investing in a professional <b><a href=” https://sizemoreservices.com/"> Garbage Removal Service in Aurora CO CA </a></b> is an effective and stress-free way to reclaim your space and restore order to your environment. Whether it's dealing with old furniture, broken appliances, or general clutter, our team offers comprehensive solutions tailored to your needs. With the added benefits of time savings, increased safety, and eco-friendly disposal practices, junk removal is not only a practical choice but a responsible one.</p>
+            <p>In conclusion, investing in a professional <b><a href="https://sizemoreservices.com/">Garbage Removal Service in Aurora CO</a></b> is an effective and stress-free way to reclaim your space and restore order to your environment. Whether it's dealing with old furniture, broken appliances, or general clutter, our team offers comprehensive solutions tailored to your needs. With the added benefits of time savings, increased safety, and eco-friendly disposal practices, junk removal is not only a practical choice but a responsible one.</p>
             <p>Let us handle the heavy lifting and the details while you enjoy a cleaner, more organized space. Whether you’re looking to free up room in your home, office, or even your garage, we’re here to help. Transform your space today with our reliable and efficient junk removal services.</p>
         </div>
 
